[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gui-pyqt-widgets"
version = "0.1.0"
description = "A collection of reusable PySide6 GUI components"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.9.1",
    "pytest>=8.4.1",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment",
]

[project.urls]
Homepage = "https://github.com/yourusername/gui-pyqt-widgets"
Repository = "https://github.com/yourusername/gui-pyqt-widgets"

[tool.hatch.build.targets.wheel]
packages = ["src/gui_pyqt_widgets"]
